[package]
name = "ech-rs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive", "env"] }
env_logger = "0.11"
# hickory-resolver = { version = "=0.25.2", features = ["dns-over-https-rustls", "webpki-roots"] }
hickory-resolver = { version = "=0.25.2", features = ["webpki-roots"] }
log = { version = "0.4.8" }
rustls = "0.23.19"
tokio = { version = "1.34", features = ["io-util", "macros", "net", "rt"]}
webpki-roots = "0.26"
